mostly fixed need to check frame alignment

--- a/style.css
+++ b/style.css
@@ -131,3 +131,18 @@
 html * {
   font-family: monospace;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 50%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
